Bug 410610 - Can't open a local HTML file that has accents (special unicode characters) in its filename, r=luser+Neil